--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   // 🔴 REPLACE THESE
   const SUPABASE_URL = "https://fhtzawegbejlfyqkipnp.supabase.co";
-  const SUPABASE_KEY = "sb_publishable_rm0qe8iX0hRvvS4gAQlPHA_pgsvb1KT";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZodHphd2VnYmVqbGZ5cWtpcG5wIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg0Mzk4MDMsImV4cCI6MjA4NDAxNTgwM30.13S_lHY3ftr98r3lPvAGLKOrfyVI2hTFfywLTjwUmug";
 
 
 
