--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
   // 🔴 REPLACE THESE
-  const SUPABASE_URL = "https://fhtzawegbejlfyqkipnp.supabase.co";
+    const SUPABASE_URL = "https://fhtzawegbejlfyqkipnp.supabase.co";
   
   const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZodHphd2VnYmVqbGZ5cWtpcG5wIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg0Mzk4MDMsImV4cCI6MjA4NDAxNTgwM30.13S_lHY3ftr98r3lPvAGLKOrfyVI2hTFfywLTjwUmug";
 
@@ -67,12 +67,10 @@
   const entriesDiv = document.getElementById("entries");
 
   // -----------------------------
-  // Global functions for Option 1
+  // Global functions for buttons
   // -----------------------------
-
-  window.updateUI = async function() {
-    const { data: { user } } = await supabase.auth.getUser();
-    if (user) {
+  window.updateUI = function(session) {
+    if (session && session.user) {
       authDiv.classList.add("hidden");
       appDiv.classList.remove("hidden");
       loadEntries();
@@ -101,15 +99,16 @@
         console.error(signup.error);
         return;
       }
-      console.log("User created:", signup.data.user);
+      data = signup;
     }
 
-    await updateUI();
+    // Update UI immediately with the session
+    updateUI(data.session || null);
   }
 
   window.signOut = async function() {
     await supabase.auth.signOut();
-    await updateUI();
+    updateUI(null);
   }
 
   window.addEntry = async function() {
@@ -151,9 +150,20 @@
   }
 
   // -----------------------------
+  // Listen for auth state changes
+  // -----------------------------
+  supabase.auth.onAuthStateChange((event, session) => {
+    console.log("Auth event:", event, session);
+    updateUI(session);
+  });
+
+  // -----------------------------
   // Initial check for logged-in user
   // -----------------------------
-  updateUI();
+  (async () => {
+    const { data: { session } } = await supabase.auth.getSession();
+    updateUI(session);
+  })();
 
 </script>
 </body>
