--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-<h1>Supabase PWA</h1>
+<h1>Supabase PWA | Version tracker = 1 </h1>
 
 <div id="auth">
   <input id="email" placeholder="Email">
